Final commit for 4.1 practice of 'places you've been', contains finalized HTML and scripting with minor styling effects for buttons and bootstrap classes.

--- a/index.html
+++ b/index.html
@@ -40,10 +40,13 @@
             <label for="notes-in">Tell us any other notes you may have about your destination here:</label>
             <input type="text" id="notes-in">
           </div>
-          <button type="submit" class="btn">Add Contact</button>
+          <button type="submit" class="btn">Add Destination</button>
         </form>
       </div>
       <br>
+      <div id="output-div">
+
+      </div>
     </div>
   </body>
 </html>
